# PyCopilot

./: README.md  main.py  pyproject.toml
src/pycopilot/: __init__.py  __main__.py  cherry-studio-config.json  server.py
src/pycopilot/tools/: README.md  __init__.py  add.py  base.py  multiply.py
src/test/: test_client.py
